problema nga ito

--- a/app/src/main/res/layout/activity_add_preset.xml
+++ b/app/src/main/res/layout/activity_add_preset.xml
@@ -3,55 +3,132 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
         >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Add Preset"
+            android:fontFamily="@font/robotobold"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:textColor="@color/black">
+
+        </TextView>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:theme="@style/EditTextTheme"
+            app:boxStrokeWidth="10dp"
+            app:errorEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+
+                android:id="@+id/txtName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:enabled="false"
+                android:fontFamily="@font/opensansregular"
+                android:hint="Unit Name"
+                android:inputType="text"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="15sp"
+                android:theme="@style/EditTextTheme" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/robotoregular"
+                android:text="Unit Group"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp">
+
+            </TextView>
+
+            <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/spinner"
+            />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:gravity="center"
             >
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnAdd"
+                android:text="ADD"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/add"
-                />
-            <Button
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:backgroundTint="#02aff3"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:layout_marginRight="10dp"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnBypass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/delete"
-                />
-            <Button
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#02aff3"
+                android:text="Bypass"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:layout_marginRight="10dp"/>
+            />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnRemove"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/transfer"
-                />
-            <Button
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#FF0000"
+                android:text="Remove"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:layout_marginRight="10dp"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSubmit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/bypass"
-                />
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#02aff3"
+                android:text="Submit"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:layout_marginRight="10dp"/>
         </LinearLayout>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtName"
-            android:layout_margin="10dp"
-            android:hint="Unit Name"/>
 
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:id="@+id/spinner"
-            />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
