--- a/app/src/main/res/layout/views_preset.xml
+++ b/app/src/main/res/layout/views_preset.xml
@@ -33,6 +33,7 @@
             android:layout_weight="1"
             android:textColor="@color/white"
             app:backgroundTint="#02aff3"
+            android:id="@+id/btnEditPrice"
             android:layout_marginEnd="10dp" />
 
         <com.google.android.material.button.MaterialButton
@@ -42,6 +43,7 @@
             android:text="@string/delete"
             style="?attr/buttonBarStyle"
             android:layout_weight="1"
+            android:id="@+id/btnDelete"
             android:textColor="@color/white"
             app:backgroundTint="#FF0000"/>
 
