--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -146,6 +146,7 @@
                     android:fontFamily="@font/opensansregular"
                     android:hint="Time Added"
                     android:inputType="text"
+                    android:focusableInTouchMode="true"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:textColor="@color/black"
