--- a/app/src/main/res/layout/addnewpresetdialog.xml
+++ b/app/src/main/res/layout/addnewpresetdialog.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@drawable/circleddialog"
     android:padding="5dp">
 
     <TextView
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
-        android:text="Edit Profile Settings"
+        android:text="Add Preset Data"
         android:layout_marginBottom="10dp"
         android:textColor="@color/black"
         android:fontFamily="@font/robotobold"
@@ -40,7 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:enabled="false"
             android:fontFamily="@font/opensansregular"
             android:hint="Service Name"
             android:inputType="text"
@@ -74,7 +74,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:enabled="false"
             android:fontFamily="@font/opensansregular"
             android:hint="Service Level"
             android:inputType="text"
@@ -110,7 +109,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:enabled="false"
             android:fontFamily="@font/opensansregular"
             android:hint="Price"
             android:inputType="text"
@@ -145,7 +143,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:enabled="false"
             android:fontFamily="@font/opensansregular"
             android:hint="Pulse"
             android:inputType="text"
