--- a/app/src/main/res/layout/groupspinnerlayout.xml
+++ b/app/src/main/res/layout/groupspinnerlayout.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textSize="20dp"
-        android:textAllCaps="true"
+        android:textAllCaps="false"
         android:textColor="@android:color/black"/>
     <TextView
         android:id="@+id/spinner_list_id"
