--- a/app/src/main/res/layout/view_reports.xml
+++ b/app/src/main/res/layout/view_reports.xml
@@ -83,48 +83,81 @@
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:weightSum="4"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/txtStationName"
-            android:layout_width="30dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1"
-            android:text="1"
+            android:text="TestLaundry - Branch Oct-16-2019 Daily Report.xlsx"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="#000" />
 
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:orientation="horizontal">
+
         <TextView
-            android:id="@+id/txtServiceType"
-            android:layout_width="25dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
             android:layout_weight="1"
-            android:gravity="start"
-            android:text="wash"
+            android:text="TestLaundry - Branch Oct-15-2019 Daily Report.xlsx"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="#000" />
 
-        <TextView
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="3"
-            android:gravity="start"
-            android:layout_weight="1.5"
-            android:id="@+id/txtIp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="5dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000"
+            android:layout_gravity="start"
+            android:layout_weight="1"
+            android:text="TestLaundry - Branch Oct-14-2019 Daily Report.xlsx"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="3"
-            android:gravity="end"
-            android:layout_weight=".5"
-            android:id="@+id/txtStatus"/>
+            android:textColor="#000" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_weight="1"
+            android:text="TestLaundry - Branch Oct-13-2019 Daily Report.xlsx"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:textColor="#000" />
+
 
     </LinearLayout>
 
