--- a/app/src/main/res/layout/addinventorylayout.xml
+++ b/app/src/main/res/layout/addinventorylayout.xml
@@ -22,21 +22,11 @@
             android:textStyle="bold"
             android:textSize="25sp"
             android:textColor="@color/black"
-            android:text="Add Clients"
+            android:text="Add Stock"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/robotobold"
             android:layout_gravity="center"/>
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:text="Details"
-            android:textColor="@color/black"
-            android:fontFamily="@font/robotobold"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="start"/>
 
         <TextView
             android:layout_height="wrap_content"
@@ -53,31 +43,31 @@
 
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:theme="@style/EditTextTheme"
-            app:boxStrokeWidth="10dp"
-            app:errorEnabled="true"
-            >
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/first_name"
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/opensansregular"
-                android:hint="First Name"
-                android:inputType="textCapSentences"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
+                android:fontFamily="@font/robotoregular"
+                android:text="Item"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="15sp"
-                />
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp">
 
-        </com.google.android.material.textfield.TextInputLayout>
+            </TextView>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:id="@+id/itemSpinner"
+                />
+        </LinearLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -88,14 +78,15 @@
             app:errorEnabled="true"
             >
 
+
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/last_name"
+                android:id="@+id/inventoryQuantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/opensansregular"
-                android:hint="Last Name"
-                android:inputType="textCapSentences"
+                android:hint="Quantity"
+                android:inputType="number"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:textColor="@color/black"
@@ -103,33 +94,6 @@
                 android:textSize="15sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:theme="@style/EditTextTheme"
-            app:boxStrokeWidth="10dp"
-            app:errorEnabled="true"
-            >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/clientsEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/opensansregular"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="15sp"
-            />
-        </com.google.android.material.textfield.TextInputLayout>
-
 
 
 
