--- a/app/src/main/res/layout/editconsumablesdialog.xml
+++ b/app/src/main/res/layout/editconsumablesdialog.xml
@@ -22,21 +22,11 @@
             android:textStyle="bold"
             android:textSize="25sp"
             android:textColor="@color/black"
-            android:text="Add Clients"
+            android:text="Edit Consumables"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/robotobold"
             android:layout_gravity="center"/>
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:text="Details"
-            android:textColor="@color/black"
-            android:fontFamily="@font/robotobold"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="start"/>
 
         <TextView
             android:layout_height="wrap_content"
@@ -57,18 +47,19 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
             android:theme="@style/EditTextTheme"
             app:boxStrokeWidth="10dp"
             app:errorEnabled="true"
             >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/first_name"
+                android:id="@+id/consumablesItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="@font/opensansregular"
-                android:hint="First Name"
+                android:hint="Item Name"
                 android:inputType="textCapSentences"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
@@ -79,6 +70,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
@@ -89,13 +81,13 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/last_name"
+                android:id="@+id/consumablesPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/opensansregular"
-                android:hint="Last Name"
-                android:inputType="textCapSentences"
+                android:hint="Price"
+                android:inputType="number"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:textColor="@color/black"
@@ -103,33 +95,6 @@
                 android:textSize="15sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:theme="@style/EditTextTheme"
-            app:boxStrokeWidth="10dp"
-            app:errorEnabled="true"
-            >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/clientsEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/opensansregular"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="15sp"
-            />
-        </com.google.android.material.textfield.TextInputLayout>
-
 
 
 
