--- a/app/src/main/res/layout/sendereditlayout.xml
+++ b/app/src/main/res/layout/sendereditlayout.xml
@@ -22,7 +22,7 @@
             android:textStyle="bold"
             android:textSize="25sp"
             android:textColor="@color/black"
-            android:text="Add Clients"
+            android:text="Email Notification Setup"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/robotobold"
             android:layout_gravity="center"/>
@@ -30,12 +30,12 @@
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:text="Details"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:text="Fill out the form with details about the sender's email"
             android:textColor="@color/black"
-            android:fontFamily="@font/robotobold"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:layout_gravity="start"/>
 
         <TextView
@@ -57,19 +57,20 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
             android:theme="@style/EditTextTheme"
             app:boxStrokeWidth="10dp"
             app:errorEnabled="true"
             >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/first_name"
+                android:id="@+id/sender_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="@font/opensansregular"
-                android:hint="First Name"
-                android:inputType="textCapSentences"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:textColor="@color/black"
@@ -79,6 +80,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
@@ -89,13 +91,13 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/last_name"
+                android:id="@+id/sender_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/opensansregular"
-                android:hint="Last Name"
-                android:inputType="textCapSentences"
+                android:hint="Password"
+                android:inputType="textPassword"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:textColor="@color/black"
@@ -105,33 +107,16 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:theme="@style/EditTextTheme"
-            app:boxStrokeWidth="10dp"
-            app:errorEnabled="true"
-            >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/clientsEmail"
-            android:layout_width="match_parent"
+        <TextView
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/opensansregular"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
+            android:id="@+id/link_settings"
+            android:layout_width="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/black"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="15sp"
-            />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
+            android:layout_marginTop="15dp"
+            android:layout_gravity="start"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
