--- a/app/src/main/res/layout/views_inventory.xml
+++ b/app/src/main/res/layout/views_inventory.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="#02aff3"
+            android:id="@+id/btnInventoryAdd"
             android:text="@string/add"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
@@ -65,143 +66,10 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:weightSum="3"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtStationName"
-            android:layout_width="69dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            android:text="Detergent"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-        <TextView
-            android:id="@+id/txtServiceType1"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:text="30"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-        <TextView
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="10"
-            android:gravity="start"
-            android:layout_weight="1"
-            android:id="@+id/txtIp1"/>
-
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:weightSum="3"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtStationName1"
-            android:layout_width="69dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            android:text="Fabric Conditioner"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-        <TextView
-            android:id="@+id/txtServiceType2"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:text="20"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-        <TextView
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="15"
-            android:gravity="start"
-            android:layout_weight="1"
-            android:id="@+id/txtIp2"/>
-
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:weightSum="3"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtStationName2"
-            android:layout_width="69dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            android:text="Bleach"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-        <TextView
-            android:id="@+id/txtServiceType3"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:text="13"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="#000" />
-
-        <TextView
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="12"
-            android:gravity="start"
-            android:layout_weight="1"
-            android:id="@+id/txtIp3"/>
-
-
-
-    </LinearLayout>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:background="@android:color/white"
-        android:listSelector="@android:color/darker_gray"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
 </LinearLayout>
