--- a/app/src/main/res/layout/sendereditlayout.xml
+++ b/app/src/main/res/layout/sendereditlayout.xml
@@ -134,6 +134,17 @@
                 android:textColor="@android:color/white"
                 android:layout_marginRight="20dp"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/testSender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#02aff3"
+                android:text="Test"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:layout_marginRight="20dp"/>
+
 
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
